fixed uneven blog margin

--- a/_sass/modules/_header.scss
+++ b/_sass/modules/_header.scss
@@ -103,7 +103,6 @@
         @media (max-width: 600px){
             width: 100%;
             justify-content: space-evenly;
-            margin-top: 20px;
         }
     }
 
